--- a/Hotel/Hotel/Views/Shared/Components/Footer/Default.cshtml
+++ b/Hotel/Hotel/Views/Shared/Components/Footer/Default.cshtml
@@ -6,7 +6,7 @@
             <div class="col-xl-3 col-lg-5 col-sm-6">
                 <div class="footer-widget widget_about wow fadeInUp delay-0-2s">
                     <div class="footer-logo mb-25">
-                        <a href="index.html"><img src="~/assets/images/logos/logo.png" alt="Logo"></a>
+                        <a asp-action="Index" asp-controller="Home"><img src="~/assets/images/logos/logocaspian1.png" alt="Logo"></a>
                     </div>
                     <p>Our hotel offers luxurious rooms, exceptional dining, a state-of-the-art fitness center, and a serene spa. Enjoy stunning beaches, a relaxing jacuzzi, a sparkling swimming pool, and convenient transportation services.</p>
                     <div class="social-style-one pt-10">
@@ -45,7 +45,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="copyright-text">
-                        <p>© 2023 Caspian Horizon. All Rights Reserved.</p>
+                        <p>© 2024 Caspian Horizon. All Rights Reserved.</p>
                     </div>
                 </div>
                 <div class="col-lg-6 text-lg-end">
