--- a/Hotel/Hotel/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Hotel/Hotel/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
 	<meta charset="utf-8" />
 	<title>Caspian Horizon</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta content="Premium Multipurpose Admin & Dashboard Template" name="description" />
+	<meta content="Caspian Horizon" name="description" />
 	<meta content="Themesbrand" name="author" />
 	<!-- App favicon -->
 	<link rel="shortcut icon" href="~/admin/assets/images/favicon.ico">
@@ -14,7 +14,7 @@
 	<!-- preloader css -->
 	<link rel="stylesheet" href="~/admin/assets/css/preloader.min.css" type="text/css" />
 
-    <!-- Datatables -->
+    <!-- Datatables --> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/2.0.8/css/dataTables.dataTables.css" />
 
@@ -44,16 +44,7 @@
                                 <img src="~/admin/assets/images/logo-sm.svg" alt="" height="24">
                             </span>
                             <span class="logo-lg">
-                                <img src="~/admin/assets/images/logo-sm.svg" alt="" height="24"> <span class="logo-txt">Minia</span>
-                            </span>
-                        </a>
-
-                        <a href="index.html" class="logo logo-light">
-                            <span class="logo-sm">
-                                <img src="~/admin/assets/images/logo-sm.svg" alt="" height="24">
-                            </span>
-                            <span class="logo-lg">
-                                <img src="~/admin/assets/images/logo-sm.svg" alt="" height="24"> <span class="logo-txt">Minia</span>
+                                <img src="~/admin/assets/images/Caspianblack.png" alt="" width="100%">
                             </span>
                         </a>
                     </div>
@@ -170,7 +161,7 @@
 
             @RenderBody()
             <!-- End Page-content -->
-            <div class="pagination-area">
+            @* <div class="pagination-area">
                 <nav aria-label="Page navigation example">
                     <ul class="pagination justify-content-center">
                         <!-- Previous Button -->
@@ -202,13 +193,13 @@
                         }
                     </ul>
                 </nav>
-            </div>
+            </div> *@
 
             <footer class="footer">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-6">
-                            <script>document.write(new Date().getFullYear())</script> © Minia.
+                            <script>document.write(new Date().getFullYear())</script> © Caspian Horizon.
                         </div>
                         <div class="col-sm-6">
                             <div class="text-sm-end d-none d-sm-block">
