--- a/Hotel/Hotel/Views/Account/Login.cshtml
+++ b/Hotel/Hotel/Views/Account/Login.cshtml
@@ -28,8 +28,8 @@
                         <div class="w-100">
                             <div class="d-flex flex-column h-100">
                                 <div class="mb-4 mb-md-5 text-center">
-                                    <a href="index.html" class="d-block auth-logo">
-                                        <img src="~/admin/assets/images/logo-sm.svg" alt="" height="28"> <span class="logo-txt">Minia</span>
+                                    <a asp-action="Index" class="d-block auth-logo">
+                                        <img src="~/admin/assets/images/Caspianblack.png" alt="" width="350px"> 
                                     </a>
                                 </div>
                                 <div class="auth-content my-auto">
