Reservation Rejecting and Admin Panel Role Section

--- a/Hotel/Hotel/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Hotel/Hotel/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -147,6 +147,12 @@
                                 <span data-key="t-authentication">Comments</span>
                             </a>
                         </li>
+                        <li>
+                            <a asp-controller="UserRole" asp-action="ManageRoles">
+                                <i class="fas fa-chess"></i>
+                                <span data-key="t-authentication">Roles</span>
+                            </a>
+                        </li>
                     </ul>
 
                 </div>
