--- a/Hotel/Hotel/Views/Room/Index.cshtml
+++ b/Hotel/Hotel/Views/Room/Index.cshtml
@@ -96,7 +96,7 @@
                         <option value="nameDesc">Name: Z to A</option>
                         <option value="ratingAsc">Rating: Low to High</option>
                         <option value="ratingDesc">Rating: High to Low</option>
-                        <option value="available">Available</option>
+                        @* <option value="available">Available</option> *@
                     </select>
                 </div>
             </div>
