--- a/Hotel/Hotel/Views/Account/ForgotPassword.cshtml
+++ b/Hotel/Hotel/Views/Account/ForgotPassword.cshtml
@@ -9,9 +9,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Forgot Password | Minia - Minimal Admin & Dashboard Template</title>
+    <title>Forgot Password | Caspian Horizon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Premium Multipurpose Admin & Dashboard Template" name="description" />
+    <meta content="" name="description" />
     <meta content="Themesbrand" name="author" />
     <link rel="shortcut icon" href="~/admin/assets/images/favicon.ico">
 
@@ -29,7 +29,7 @@
                             <div class="d-flex flex-column h-100">
                                 <div class="mb-4 mb-md-5 text-center">
                                     <a href="index.html" class="d-block auth-logo">
-                                        <img src="~/admin/assets/images/logo-sm.svg" alt="" height="28"> <span class="logo-txt">Minia</span>
+                                        <img src="~/admin/assets/images/Caspianblack.png" alt="" height="28"> 
                                     </a>
                                 </div>
                                 <div class="auth-content my-auto">
