--- a/Hotel/Hotel/Views/Home/Index.cshtml
+++ b/Hotel/Hotel/Views/Home/Index.cshtml
@@ -360,7 +360,7 @@
 		<div class="wave-shapes-two"></div>
 	</div>
 </div>
-<!-- Video Area start -->
+@* <!-- Video Area start -->
 <div class="video-area">
 	<div class="container-fluid gap-wide">
 		<div class="video-part wow fadeInUp delay-0-2s">
@@ -369,5 +369,5 @@
 		</div>
 	</div>
 </div>
-<!-- Video Area end -->
+<!-- Video Area end --> *@
 
