--- a/Hotel/Hotel/Views/Account/ResetPassword.cshtml
+++ b/Hotel/Hotel/Views/Account/ResetPassword.cshtml
@@ -31,7 +31,7 @@
                             <div class="d-flex flex-column h-100">
                                 <div class="mb-4 mb-md-5 text-center">
                                     <a href="index.html" class="d-block auth-logo">
-                                        <img src="~/admin/assets/images/logo-sm.svg" alt="" height="28"> <span class="logo-txt">Minia</span>
+                                        <img src="~/admin/assets/images/Caspianblack.png" alt="" height="28">
                                     </a>
                                 </div>
                                 <div class="auth-content my-auto">
